# sapphire-old

./: .gitignore  Cargo.toml
.cargo/: config.toml
binding-magnus/: Cargo.toml
binding-magnus/src/: audio.rs  bitmap.rs  data.rs  error.rs  filesystem.rs  font.rs  graphics.rs  helpers.rs  input.rs  lib.rs  modshot.rs  oneshot.rs  plane.rs  scripts.rs  sprite.rs  steam.rs  tilemap.rs  viewport.rs  window.rs
binding-magnus/src/helpers/: macros.rs  mod.rs
binding-magnus/src/rpg/: mod.rs
binding-mlua/: Cargo.toml
librgss/: Cargo.toml
librgss/src/: arenas.rs  data.rs  event_loop.rs  lib.rs
librgss/src/audio/: mod.rs
librgss/src/filesystem/: mod.rs
librgss/src/font/: mod.rs
librgss/src/graphics/: bitmap.rs  drawable.rs  font.rs  mod.rs  plane.rs  sprite.rs  tilemap.rs  viewport.rs  window.rs  z.rs
librgss/src/graphics/render/: binding_helpers.rs  mod.rs  primitives.rs
librgss/src/graphics/render/shaders/: mod.rs  simple.rs  simple.wgsl
librgss/src/input/: buttons.rs  mod.rs
rsgss/: Cargo.toml
ruby/: build-ruby.sh
sapphire/: Cargo.toml
sapphire/src/: main.rs
