[package]
name = "rsgss-binding-magnus"
version = "0.1.0"
edition = "2021"

[dependencies]
magnus = "0.6.2"

librgss = { version = "0.1.0", path = "../librgss/" }

color-eyre.workspace = true

alox-48 = "0.4.0"
serde = "1.0.197"
flate2 = "1.0"

parking_lot.workspace = true

[features]
embed = ["magnus/embed"]
static = ["magnus/ruby-static"]

modshot = ["librgss/modshot"]
mkxp-z = ["librgss/mkxp-z"]
