[package]
name = "sapphire-binding-magnus"
version = "0.1.0"
edition = "2021"


[dependencies]
magnus = "0.6.2"
rb-sys = "0.9.90"

librgss = { version = "0.1.0", path = "../librgss/" }

color-eyre.workspace = true

alox-48 = "0.4.0"
serde = "1.0.197"
flate2 = "1.0"

parking_lot.workspace = true

whoami = { version = "1.4.1", optional = true }
dirs = { version = "5.0.1", optional = true }

[features]
embed = ["magnus/embed"]
static = ["magnus/ruby-static"]

modshot = ["librgss/modshot", "whoami", "dirs"]
mkxp-z = ["librgss/mkxp-z"]
