[package]
name = "sapphire-binding-magnus"
version = "0.1.0"
edition = "2021"


[dependencies]
magnus = "0.6.2"
rb-sys = "0.9.90"

librgss = { version = "0.1.0", path = "../librgss/" }

color-eyre.workspace = true

alox-48 = "0.4.0"
serde = "1.0.197"
flate2 = "1.0"

parking_lot.workspace = true

whoami = { version = "1.4.1", optional = true }
dirs = { version = "5.0.1", optional = true }

rfd = { version = "0.14.0", features = ["gtk3"], default-features = false }

bytemuck.workspace = true

paste = "1.0.14"

[features]
embed = ["magnus/embed"]
static = ["magnus/ruby-static"]

# FIXME proper tilemap switching
rgss2 = ["librgss/rgss2"]
rgss3 = ["librgss/rgss3"]

rgss1_tilemap = []
rgss2_tilemap = []

# not sure about this one
rgss4 = []

modshot = ["librgss/modshot", "whoami", "dirs", "rgss2", "rgss3"]
mkxp-z = ["librgss/mkxp-z"]
steam = []
