[package]
name = "librgss"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio.workspace = true
wgpu.workspace = true
winit.workspace = true
image.workspace = true

color-eyre.workspace = true

crossbeam.workspace = true
parking_lot.workspace = true

[features]
rgss1 = []
rgss2 = []
rgss3 = []

# not sure about this one
rgss4 = []

modshot = []
mkxp-z = []
