[package]
name = "librgss"
version = "0.1.0"
edition = "2021"

[dependencies]
# TODO look into kira
rodio.workspace = true
wgpu.workspace = true
glyphon.workspace = true
winit.workspace = true
image.workspace = true

color-eyre.workspace = true
thiserror.workspace = true

itertools.workspace = true

camino.workspace = true

crossbeam.workspace = true
parking_lot.workspace = true
arc-swap.workspace = true

bytemuck.workspace = true

[features]
# FIXME proper tilemap switching
rgss2 = []
rgss3 = []

rgss1_tilemap = []
rgss2_tilemap = []

# not sure about this one
rgss4 = []

modshot = ["rgss1_tilemap", "rgss2", "rgss3"]
mkxp-z = []
