[package]
name = "sapphire"
version = "0.1.0"
edition = "2021"

[dependencies]
librgss = { version = "0.1.0", path = "../librgss" }
rsgss-binding-magnus = { version = "0.1.0", path = "../binding-magnus", features = [
  "embed",
], optional = true }

pollster = "0.3.0"

color-eyre.workspace = true

[features]
magnus = ["rsgss-binding-magnus"]
mlua = []

default = ["magnus", "modshot"] # testing against modshot for now

modshot = ["rsgss-binding-magnus/modshot"]
mkxp-z = ["rsgss-binding-magnus/mkxp-z"]
