[package]
name = "sapphire"
version = "0.1.0"
edition = "2021"

[dependencies]
librgss = { version = "0.1.0", path = "../librgss" }
sapphire-binding-magnus = { version = "0.1.0", path = "../binding-magnus", features = [
  "embed",
], optional = true }

pollster = "0.3.0"

color-eyre.workspace = true

env_logger = "0.11.3"

parking_lot = { version = "0.12.0", optional = true }

[features]
magnus = ["sapphire-binding-magnus"]
mlua = []

default = ["magnus", "modshot"] # testing against modshot for now

modshot = ["sapphire-binding-magnus/modshot"]
mkxp-z = ["sapphire-binding-magnus/mkxp-z"]
steam = ["sapphire-binding-magnus/steam"]
deadlock_detection = ["parking_lot", "parking_lot/deadlock_detection"]
